Fix server naming issues

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "DMA e-shop created by Dzmitry(aka DMA)",
-  "name": "e-shop clothing",
+  "short_name": "e-shop clothing",
+  "name": "DMA e-shop created by Dzmitry(aka DMA)",
   "icons": [
     {
       "src": "favicon.ico",
