--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "dotenv": "7.0.0",
     "express": "^4.16.4",
     "express-sslify": "^1.2.0",
-    "nodemon": "^2.0.2",
     "stripe": "6.28.0"
   },
   "devDependencies": {
-    "concurrently": "^4.0.1"
+    "concurrently": "^4.0.1",
+    "nodemon": "^2.0.2"
   }
 }
